--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "kevinzhang19870314",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@tweenjs/tween.js": "~18.6.4",
     "three": "~0.142.0",
     "three-full": "^28.0.2",
@@ -28,7 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.4.1",
