--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "kevinzhang19870314",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@material-ui/core": "^4.12.4",
     "@tweenjs/tween.js": "~18.6.4",
     "three": "~0.142.0",
@@ -35,6 +36,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
